<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/scrolLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:gravity="center"
        android:orientation="vertical">

        <!-- First name -->

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="15dp"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:textColor="@color/sign_up_edit_text_text_color"
            android:textSize="@dimen/sign_up_edit_text_text_size">

            <requestFocus />
        </EditText>

        <!-- Last name -->

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="@dimen/sign_up_space_between_edit_text"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:textColor="@color/sign_up_edit_text_text_color"
            android:textSize="@dimen/sign_up_edit_text_text_size" />

        <!-- Email -->

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="@dimen/sign_up_space_between_edit_text"
            android:hint="@string/sign_up_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/sign_up_edit_text_text_color"
            android:textSize="@dimen/sign_up_edit_text_text_size" />

        <!-- Sign up -->

        <ImageView
            android:id="@+id/signUpImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/button_sign_up_selector" />
    </LinearLayout>

</ScrollView>