<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/about_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dip">

        <!-- User profile picture on Facebook -->

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profilePictureForUserPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            app1:civ_border_width="0dp" />

        <!-- User name -->

        <TextView
            android:id="@+id/textViewForUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <!-- Highest score -->

            <LinearLayout
                android:id="@+id/linearLayoutForHighestScore"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewForHighScoreValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="80"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewForHighScoreTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_highest_score"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Last score -->

            <LinearLayout
                android:id="@+id/linearLayoutForLastScore"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewForLastScoreValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="80"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewForLastScoreTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_last_score"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Number of words -->

            <LinearLayout
                android:id="@+id/linearLayoutForNumberOfWords"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutForHighestScore"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewForNumberOfWordsValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="80"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewForNumberOfWordsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_number_of_words"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Number of sentences -->

            <LinearLayout
                android:id="@+id/linearLayoutForNumberOfSentences"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/linearLayoutForLastScore"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewForNumberOfSentencesValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="80"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewForNumberOfSentencesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_number_of_sentences"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Facebook login button -->

        <com.facebook.widget.LoginButton
            android:id="@+id/loginButtonFacebook"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>